--- a/Experiments.API/Experiments.API.csproj
+++ b/Experiments.API/Experiments.API.csproj
@@ -15,9 +15,12 @@
     <Folder Include="Consumers\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.4.0" />
+    <PackageReference Include="Confluent.Kafka" Version="1.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
+    <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.4" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.7.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Services\HomeService.cs" />
