--- a/Experiments.API/appsettings.json
+++ b/Experiments.API/appsettings.json
@@ -7,5 +7,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AWS": {
+    "AccessKey": "AKIAVE7XSBMNPVIOSFHJ",
+    "SecretKey": "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",
+    "Region": "us-east-1",
+    "ElasticUrl": "https://search-elastic-*********************.us-east-1.es.amazonaws.com"
+  }
 }
