--- a/Experiments.Application/Experiments.Application.csproj
+++ b/Experiments.Application/Experiments.Application.csproj
@@ -11,4 +11,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Experiments.Core\Experiments.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.4" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.7.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.1.0" />
+  </ItemGroup>
 </Project>
