--- a/Experiments.Core/Experiments.Core.csproj
+++ b/Experiments.Core/Experiments.Core.csproj
@@ -14,5 +14,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+    <PackageReference Include="Elasticsearch.Net.Aws" Version="7.0.4" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.7.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.1.0" />
   </ItemGroup>
 </Project>
